added the log4j2 and clean up the project